--- a/Template_web/Qualite-dArt/about.html
+++ b/Template_web/Qualite-dArt/about.html
@@ -52,7 +52,7 @@
                             <a class="nav-link" href="gallery.html">Galeria</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Servicios</a>
+                            <a class="nav-link" href="servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="about.html">Nosotros</a>
