--- a/Template_web/Qualite-dArt/contact.html
+++ b/Template_web/Qualite-dArt/contact.html
@@ -51,7 +51,7 @@
                             <a class="nav-link" href="gallery.html">Galeria</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Servicios</a>
+                            <a class="nav-link" href="servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="about.html">Nosotros</a>
