--- a/Template_web/Qualite-dArt/gallery.html
+++ b/Template_web/Qualite-dArt/gallery.html
@@ -53,7 +53,7 @@
                             <a class="nav-link active" href="gallery.html">Galeria</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Servicios</a>
+                            <a class="nav-link" href="servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="about.html">Nosotros</a>
